--- a/web/index.html
+++ b/web/index.html
@@ -2,12 +2,13 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <title>도진&채은 결혼식에 초대합니다</title>
-  <meta property="og:title" content="도진❤️채은 결혼식에 초대합니다" />
+  <title>민성&수일 결혼식에 초대합니다</title>
+  <base href="$FLUTTER_BASE_HREF">
+  <meta property="og:title" content="민성❤️수일 결혼식에 초대합니다" />
   <meta property="og:description" content="모바일 청첩장" />
   <meta property="og:type" content="website" />
-  <meta property="og:url" content="https://dojinkimm.github.io/wedding_invitation_flutter/#/" />
-  <meta property="og:image" content="https://dojinkimm.github.io/wedding_invitation_flutter/assets/assets/images/2.jpeg" />
+  <meta property="og:url" content="https://gqp2005.github.io/wedding/#/" />
+  <meta property="og:image" content="https://gqp2005.github.io/wedding/assets/assets/images/hand.jpg" />
 
   <style>
     .lds-heart {
